{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 133,
  "lineage": "3f11370f-d75f-2f7b-af46-880cff89fb55",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "monarch_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-12T09:43:43.788-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/monarch-initiative/global/firewalls/monarch-fw-allow-ssh",
            "log_config": [],
            "name": "monarch-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
            "priority": 1000,
            "project": "monarch-initiative",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/firewalls/monarch-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.monarch_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "monarch_fw_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-12T09:43:43.702-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/monarch-initiative/global/firewalls/monarch-fw-allow-app",
            "log_config": [],
            "name": "monarch-fw-allow-app",
            "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
            "priority": 1000,
            "project": "monarch-initiative",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/firewalls/monarch-fw-allow-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.monarch_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "monarch_fw_app_ssl",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-12T09:43:43.665-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/monarch-initiative/global/firewalls/monarch-fw-allow-app-ssl",
            "log_config": [],
            "name": "monarch-fw-allow-app-ssl",
            "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
            "priority": 1000,
            "project": "monarch-initiative",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/firewalls/monarch-fw-allow-app-ssl",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.monarch_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "monarch_fw_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-12T09:44:05.246-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/monarch-initiative/global/firewalls/monarch-fw-allow-local",
            "log_config": [],
            "name": "monarch-fw-allow-local",
            "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
            "priority": 1000,
            "project": "monarch-initiative",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/firewalls/monarch-fw-allow-local",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.monarch_network",
            "google_compute_subnetwork.monarch_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "tf-monarch-manager",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/disks/tf-monarch-manager"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-manager",
            "instance_id": "4925534537687500218",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "enable-oslogin": "true",
              "role": "manager",
              "services": "[]"
            },
            "metadata_fingerprint": "HXNebKLl1ZI=",
            "name": "tf-monarch-manager",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.1.29",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
                "network_ip": "10.128.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/regions/us-central1/subnetworks/monarch-subnetwork",
                "subnetwork_project": "monarch-initiative"
              }
            ],
            "project": "monarch-initiative",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-manager",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.monarch_network",
            "google_compute_subnetwork.monarch_subnetwork"
          ]
        },
        {
          "index_key": "tf-monarch-owlsim",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/disks/tf-monarch-owlsim"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-owlsim",
            "instance_id": "5679311159380411834",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-custom-6-49152",
            "metadata": {
              "enable-oslogin": "true",
              "role": "worker",
              "services": "[\"owlsim\"]"
            },
            "metadata_fingerprint": "prbbV3_key8=",
            "name": "tf-monarch-owlsim",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.214.139",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
                "network_ip": "10.128.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/regions/us-central1/subnetworks/monarch-subnetwork",
                "subnetwork_project": "monarch-initiative"
              }
            ],
            "project": "monarch-initiative",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-owlsim",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.monarch_network",
            "google_compute_subnetwork.monarch_subnetwork"
          ]
        },
        {
          "index_key": "tf-monarch-scigraph",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/disks/tf-monarch-scigraph"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-scigraph",
            "instance_id": "6753299183790720442",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highmem-2",
            "metadata": {
              "enable-oslogin": "true",
              "role": "worker",
              "services": "[\"scigraph-data\",\"scigraph-ontology\"]"
            },
            "metadata_fingerprint": "2i_wSx3AbFk=",
            "name": "tf-monarch-scigraph",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.30.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
                "network_ip": "10.128.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/regions/us-central1/subnetworks/monarch-subnetwork",
                "subnetwork_project": "monarch-initiative"
              }
            ],
            "project": "monarch-initiative",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-scigraph",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.monarch_network",
            "google_compute_subnetwork.monarch_subnetwork"
          ]
        },
        {
          "index_key": "tf-monarch-solr",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/disks/tf-monarch-solr"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-solr",
            "instance_id": "6639441623703356858",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "enable-oslogin": "true",
              "role": "worker",
              "services": "[\"solr\",\"biolink\"]"
            },
            "metadata_fingerprint": "J6l5y9IS2ps=",
            "name": "tf-monarch-solr",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.30.225",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/regions/us-central1/subnetworks/monarch-subnetwork",
                "subnetwork_project": "monarch-initiative"
              }
            ],
            "project": "monarch-initiative",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/zones/us-central1-a/instances/tf-monarch-solr",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.monarch_network",
            "google_compute_subnetwork.monarch_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "monarch_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/monarch-initiative/global/networks/monarch-network",
            "mtu": 0,
            "name": "monarch-network",
            "project": "monarch-initiative",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "monarch_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-12T09:43:43.865-07:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/monarch-initiative/regions/us-central1/subnetworks/monarch-subnetwork",
            "ip_cidr_range": "10.128.0.0/9",
            "name": "monarch-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "monarch-initiative",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/regions/us-central1/subnetworks/monarch-subnetwork"
          },
          "dependencies": [
            "google_compute_network.monarch_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "urlmap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8983"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "9000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "9031"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-12T09:44:19.237-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/monarch-initiative/global/firewalls/monarch-tf-balancer-hc-0",
            "log_config": [],
            "name": "monarch-tf-balancer-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/networks/monarch-network",
            "priority": 1000,
            "project": "monarch-initiative",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/firewalls/monarch-tf-balancer-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.nodes",
            "google_compute_network.monarch_network",
            "google_compute_network_endpoint_group.negs",
            "google_compute_subnetwork.monarch_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.120.71.109",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-10-12T09:43:22.272-07:00",
            "id": "projects/monarch-initiative/global/addresses/monarch-tf-balancer-address",
            "name": "monarch-tf-balancer-address",
            "prefix_length": 0,
            "project": "monarch-initiative",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monarch-initiative/global/addresses/monarch-tf-balancer-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}